	  IOPORT register.
	* lib/string/lib_memchr.c:  Add support for memchr() (contributed by Mike Smith)
	* lib/string/lib_memccpy.c:  Add support for memcpy()
	* arch/arm/src/lpc17xx/lpc17_serial.c:  Now supports ioctl commands to change
	  the baud using tcsetattr() (contributed by Chris Taglia).
	* arch/*/src/*_serial.c: Fix ioctl method return values.  Theses methods
	  should return a negated errno value; they should not set the errno
	  variable.
	* sched/on_exit.c, sched/task_exithook.c, and include/nuttx/sched.c:  Add
	  support for multiple registered on_exit() functions if CONFIG_SCHED_ONEXIT_MAX
	  is defined.
	* drivers/syslog/ramlog.c: Move the RAM SYSLOG device into drivers/syslog
	  so that it will be in the same directory as some new SYSLOGing devices
	  in the works.
	* include/nuttx/syslog.h and drivers/syslog/ramlog.c:  The SYSLOG putc function
	  now has a common name that is independent of the device that provides the
	  SYSLOG.
	* include/nuttx/syslog.h and drivers/syslog/syslog.c:  This is a new, generic
	  SYSLOG device that can redirect debug output to any character device or file.
	  So you can log debug output to a file or you can put the console on /dev/ttyS0
	  and the debug output on /dev/ttyS1.
	* arch/arm/src/lpc43xxl/lpc43_spifi.c: Correct an addressing error in the LPC43
	  SPIFI MTD driver
	* drivers/syslog/syslog.c and fs/fs_syslog.c:  Moved the generic syslog logic
	  from drivers/syslog to fs/ where is belongs.  Especially after realizing that
	  the syslog logic is going to have to some internal FS operations in order
	  to realize a totally thread-independent SYSLOG interface.
	* arch/arm/src/stm32/stm32*_rcc.c and .h:  If CONFIG_PM is defined, add a
	  function called stm32_clockenable() that can be used by PM logic to re-start
	  the PLL after re-awakening from deep sleep modes.
	* fs/fs_foreachinode.c and fs/fs_foreachmountpoint.c:  All logic to traverse
	  inodes and mountpoints in the NuttX psuedo-file system.
