@@ -893,7 +893,7 @@ df
 </p>
 <ul><pre>
 nsh> mount
- /etc type romfs
+  /etc type romfs
   /tmp type vfat
 nsh> df
   Block  Number
